django-admirarchy changelog
===========================


v0.2.2
------
* Dummy. No changes.


v0.2.1
------
+ Added Grappelli style support.
* Django 1.10 compatibility improved.


v0.2.0
------
+ Implemented in-popup navigation for adjacency lists.


v0.1.0
------
+ Basic functionality.