@@ -2,6 +2,11 @@ django-admirarchy changelog
 ===========================
 
 
+Unreleased
+----------
+* Fixed FK popup for nested sets.
+
+
 v0.2.2
 ------
 * Dummy. No changes.
